# mysqlconnectorpkg

./: README.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py
.github/workflows/: ci.yaml  python-publish.yaml
experiments/: experiments.ipynb  students.csv
mysql_crud_test/: main.ipynb  requirements.txt
src/mysql_connect/: mysql_crud.py
