[metadata]
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
install_requires = 
    mysql-connector-python
    dnspython
    pandas
    numpy
    ensure
    tox

[options.extras_require]
testing =
    pytest==7.1.3
    # tox==3.25.1
    black==22.8.0
    flake8==5.0.4
    mypy==0.971

[options.package_data]
mysql_crud_automation=py.typed

[flake8]
max-line-length = 160
exclude = __init__.py